SF Primes/src/objects/Opportunity_Quotes__c.object
<CustomObject>
    <description>Link to SQT deals for a given opportunity</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Quotes</relationshipLabel>
        <relationshipName>Opportunity_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Binder__c</fullName>
        <formula>IF( LEN(Filename__c) &gt; 0 , HYPERLINK( Filename__c , &quot;Open Binder&quot;, &quot;_blank&quot;), &quot;&quot;)</formula>
        <label>Binder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Data_Exchange_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Data Exchange Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_CMF_Number__c</fullName>
        <label>Core CMF Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dash_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dash Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Approver__c</fullName>
        <label>Deal Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Description__c</fullName>
        <label>Deal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Edit__c</fullName>
        <formula>hyperlink(&quot;http://&quot; &amp; $Setup.CustomSettings__c.SQTServer__c &amp; &quot;Home.aspx?DealID=&quot; &amp; Deal_ID__c &amp; &quot;&amp;UID=&quot; &amp; $User.Id, Deal_Description__c, &quot;_blank&quot;)</formula>
        <label>Deal Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Deal ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docs_Pushed_from_SQT__c</fullName>
        <label>Docs Pushed from SQT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <label>Filename</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finalized_Deal__c</fullName>
        <label>Finalized Deal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>French_Wording__c</fullName>
        <defaultValue>false</defaultValue>
        <label>French Wording</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPNS_CMF_Number__c</fullName>
        <label>IPNS CMF Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPNS_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IPNS Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPNS_Site_Address__c</fullName>
        <label>IPNS Site Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPNS_Site_City__c</fullName>
        <label>IPNS Site City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPNS_Site_Name__c</fullName>
        <label>IPNS Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPNS_Site_State__c</fullName>
        <label>IPNS Site State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPNS_Site_Zip__c</fullName>
        <label>IPNS Site Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intravision_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intravision Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Site_Address__c</fullName>
        <label>Main Site Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Site_City__c</fullName>
        <label>Main Site City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Site_Name__c</fullName>
        <label>Main Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Site_State__c</fullName>
        <label>Main Site State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Site_Zip__c</fullName>
        <label>Main Site Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NIADA_Region_Location__c</fullName>
        <label>NIADA Region Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Telephony__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Network/Telephony</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Refundable_Deposit_IPNS__c</fullName>
        <label>Non-Refundable Deposit IPNS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Refundable_Deposit__c</fullName>
        <label>Non-Refundable Deposit Core</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Quotes_CreateDate__c</fullName>
        <label>Opp Quotes CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Quotes_LastUpdated__c</fullName>
        <label>Opp Quotes LastUpdated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Quotes</relationshipLabel>
        <relationshipName>Opportunity_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Released_To_Sales__c</fullName>
        <label>Released To Sales</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SQT_Created_by__c</fullName>
        <label>SQT Created by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Deal_ID__c</fullName>
        <label>SQT Deal ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Deal_Version_Number__c</fullName>
        <label>SQT Deal Version Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Status__c</fullName>
        <label>SQT Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Monthlies__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Monthlies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_One_Times__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total One- Times</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3PA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3PA</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Quotes</label>
    <nameField>
        <label>Deal ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>